--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="uk">
     <head>
         <title>Шамков Іван ІП-11 Front-End 2023</title>
-        <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
+        <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
     </head>
     <body style="background-color: darkorange;">
 
         <div>Лабораторні роботи Шамков Іван ІП-11:</div>
         <ul>
-            <li>Lab 1</li>
+            <li><a href="Lab1/index1.html">Lab 1</a></li>
         </ul>
         
     </body>
