--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <div>Лабораторні роботи Шамков Іван ІП-11:</div>
         <ul>
             <li><a href="Lab1/index1.html">Lab 1</a></li>
+            <li><a href="Lab2/index.html">Lab 2</a></li>
         </ul>
         
     </body>
