Lab 3 Task 2 Done
Page layout with flexbox finished.

In order to display both variants of the same page I had to create the
second .html file. That's why there is this much new files.

It is a bad practice and it would be better to use JavaScript and
button to change used .css files for the same .html file.
This will be done later.

--- a/Lab3/index-float.html
+++ b/Lab3/index-float.html
@@ -4,7 +4,7 @@
         <title>Шамков І.Д. ІП-11</title>
         <meta http-equiv="Content-type" content="text/html" charset="UTF-8">
         <meta name="description" content="This page is a third lab assignment for Front-End discipline">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style-float.css">
     </head>
     <body>
         <div id="container">
