--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <ul>
             <li><a href="Lab1/index1.html">Lab 1</a></li>
             <li><a href="Lab2/index.html">Lab 2</a></li>
-            <li><a href="Lab3/index.html">Lab 3</a></li>
+            <li><a href="Lab3/index-float.html">Lab 3 (float)</a></li>
+            <li><a href="Lab3/index-flex.html">Lab 3 (flex)</a></li>
         </ul>
         
     </body>
