--- a/Lab1_4/index.html
+++ b/Lab1_4/index.html
@@ -6,13 +6,15 @@
         <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
         <meta name="keywords" content="КПІ, Front-End, лабораторна робота">
         <meta name="description" content="This page is a first lab assignment for Front-End discipline">
+        <link rel="stylesheet" href="css/style.css">
+        <script src="scripts/script.js"></script>
     </head>
     <body>
         <h2>Шамков Іван Дмитрович</h2>
         <p>Місце та дата народження: м.Київ, 27.11.2003</p>
-        <p>Середня освіта: Ірпінська ЗОШ I-III ступенів №17.<br>
+        <p id="thirdElement">Середня освіта: Ірпінська ЗОШ I-III ступенів №17.<br>
            Вища освіта: Національний технічний університет України «Київський політехнічний інститут імені Ігоря Сікорського»</p>
-        <p>Хобі:</p>
+        <p id="fourthElement">Хобі:</p>
         <ul>
             <li>Кіно та музика</li>
             <li>日本語 (вивчення японської мови)</li>
@@ -36,8 +38,15 @@
             записав партії на всіх інструментах самостійно (за винятком однієї чи двох гітарних партій). І зробив він це за 5 днів!
         </p>
 
-        <a href="https://www.youtube.com/watch?v=js-d7HR5ZkA&list=PLPLj3dwmpRnGPzhZ2Yxchue-UXjM6_R7k&ab_channel=GrungeMusic4U" target="_blank">
-            <img src="img/FooFighters-FooFighters.jpg" alt="Foo Fighters first album cover"> 
+        <a id="linkFooFighters" href="https://www.youtube.com/watch?v=js-d7HR5ZkA&list=PLPLj3dwmpRnGPzhZ2Yxchue-UXjM6_R7k&ab_channel=GrungeMusic4U" target="_blank">
+            <img id="imgFooFighters" src="img/FooFighters-FooFighters.jpg" alt="Foo Fighters first album cover"> 
         </a>
+
+        <div>
+            <button onclick="addImage()">Додати</button>
+            <button onclick="deleteImage()">Видалити</button>
+            <button onclick="zoomIn()">Збільшити</button>
+            <button onclick="zoomOut()">Зменшити</button>
+        </div>
     </body>
 </html>
