--- a/Lab5/index.html
+++ b/Lab5/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="This page is a fifth lab assignment for Front-End discipline">
         <link rel="stylesheet" href="css/style.css">
         <script src="scripts/script.js"></script>
+        <script src="scripts/tableColours.js"></script>
     </head>
     <body>
         <div class="main-container">
@@ -28,5 +29,10 @@
                 <p><b>Дата Народження: </b><span id="resultBirth"></span></p>
             </div>
         </div>
+
+        <script src="scripts/tableGeneratejs"></script>
+        <script>
+            generateTable(6, 6);
+        </script>
     </body>
 </html>
