--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li><a href="Lab3/index-float.html">Lab 3 (float)</a></li>
             <li><a href="Lab3/index-flex.html">Lab 3 (flex)</a></li>
             <li><a href="Lab5/index.html">Lab 5</a></li>
+            <li><a href="Lab6/index.html">Lab 6</a></li>
         </ul>
     </body>
 </html>
