--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="Lab3/index-flex.html">Lab 3 (flex)</a></li>
             <li><a href="Lab5/index.html">Lab 5</a></li>
             <li><a href="Lab6/index.html">Lab 6</a></li>
+            <li><a href="Lab7/my-app/public/index.html">Lab 7</a></li>
         </ul>
     </body>
 </html>
